depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-tomcat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache-tomcat
  template:
    metadata:
      labels:
        app: apache-tomcat
    spec:
      containers:
        - name: mytomcat
          image: my321docker321/tomcat:8.0.53
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: apache-tomcat
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: apache-tomcat
